# vid-ap-play

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: issue.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/css/: global.css  reset.css
src/components/Common/Button/: Button.tsx
src/components/Common/Form/: File.tsx
src/components/Common/Header/: Header.tsx
src/components/Common/Icon/: Icon.tsx
src/components/Common/Layout/: Layout.tsx
src/components/Common/Loading/: Spinner.tsx
src/components/Ui/Card/: VideoCard.tsx
src/components/Ui/Dialog/: VideoDialog.tsx
src/components/Ui/Tab/: ContentTab.tsx  ToggleTab.tsx
src/hooks/: useDirectory.ts  useStores.ts  useTab.ts  useVideo.ts
src/type/: Tab.ts
src/types/: Tab.ts  file.ts
src/utils/: format.ts  string.ts
